--- a/portfolio.css
+++ b/portfolio.css
@@ -525,7 +525,7 @@ section{
 
     .about-img img{
         width: 100%;
-        height: 400px;
+        height: auto;
         max-width: 400px;
         border-radius: 50%;
         object-fit: contain;
